[workspace]
members = [
    "proptest",
    "proptest-derive",
    "proptest-state-machine",
    "proptest-macro",
]

resolver = "2"
exclude = ["proptest/test-persistence-location/*"]

[workspace.dependencies]
bit-set = "0.8.0"
bit-vec = "0.8.0"
bitflags = "2.9"
compiletest_rs = "0.11"
convert_case = "0.6"
criterion = "0.5"
insta = "1"
lazy_static = "1.2"
message-io = "0.19.0"
num-traits = { version = "0.2.15", default-features = false }
prettyplease = "0.2"
proc-macro2 = "1.0"
proptest-macro = { version = "0.1", path = "proptest-macro" }
quote = "1.0"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_xorshift = "0.3"
regex = "1.0"
regex-syntax = "0.8"
rusty-fork = { version = "0.3.0", default-features = false }
syn = "2.0.100"
tempfile = "3.0"
trybuild = "=1.0.105"
unarray = "0.1.4"
x86 = "0.52.0"
