[package]
name = "proptest-derive"
version = "0.1.0"
authors = ["Mazdak Farrokhzad", "Jason Lingle"]
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/AltSysrq/proptest"
documentation = "https://docs.rs/proptest-derive"

keywords = ["derive", "arbitrary", "proptest", "testing", "quickcheck"]
categories = ["development-tools::testing"]

description = """
#[derive(Arbitrary)] for proptest.
"""

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "AltSysrq/proptest" }

[badges.appveyor]
repository = "AltSysrq/proptest"
branch = "master"
service = "github"

[features]

default = ["no_cfg"]

# Prevents #[derive(Arbitrary)] from putting #[cfg(test)] on the implementation.
no_cfg = []

[lib]
proc-macro = true

[dev-dependencies]
proptest = { version = "0.8.7", path = "../proptest" }
compiletest_rs = { version = "0.3.3", features = ["tmp"] }

[dependencies]
proc-macro2 = "0.4"

syn = { version = "0.15.17", features = ["visit", "extra-traits", "full"] }
quote = "0.6"
