[package]
name = "proptest-macro"
description = "Procedural macros for the proptest crate"
version = "0.1.0"
authors = ["The Proptest Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/proptest-rs/proptest"
homepage = "https://proptest-rs.github.io/proptest/proptest/index.html"
keywords = ["property", "testing", "quickcheck", "fuzz", "hypothesis"]
categories = ["development-tools::testing"]
rust-version = "1.65"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.6"

[dev-dependencies]
insta = "1"
prettyplease = "0.2"
# Transitive dependency of `insta`, v0.15.10 requires MSRV 1.66
console = "=0.15.8"
# Transitive dependency of `insta`, v0.1.14+ requires some features unstable on Rust 1.65
unicode-width = "=0.1.13"
