[package]
name = "proptest-macro"
description = "Procedural macros for the proptest crate"
version = "0.5.0"
authors = ["The Proptest Developers"]
edition = "2021"
rust-version = "1.84"
license = "MIT OR Apache-2.0"
repository = "https://github.com/proptest-rs/proptest"
homepage = "https://proptest-rs.github.io/proptest/proptest/index.html"
keywords = ["property", "testing", "quickcheck", "fuzz", "hypothesis"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
prettyplease = { workspace = true }
