[package]
name = "proptest-state-machine"
version = "0.6.0"
authors = ["Tomáš Zemanovič"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/proptest-rs/proptest"
homepage = "https://proptest-rs.github.io/proptest/proptest/state-machine.html"
documentation = "https://docs.rs/proptest-state-machine/latest/proptest-state-machine/"
keywords = ["property", "testing", "quickcheck", "fuzz", "state-machine"]
categories = ["development-tools::testing"]
description = """
State machine based testing support for proptest.
"""

[features]
default = ["std"]

# Enables the use of standard-library dependent features
std = ["proptest/std"]

[dependencies]
proptest = { version = "1.9.0", path = "../proptest", default-features = true, features = [
    "fork",
    "timeout",
    "bit-set",
] }

[dev-dependencies]
message-io = { workspace = true }
# icu crates version locked as v2.1.x requires MSRV 1.83 and we're on 1.82
icu_collections = "=2.0.*"
icu_locale_core = "=2.0.*"
icu_normalizer = "=2.0.*"
icu_normalizer_data = "=2.0.*"
icu_properties = "=2.0.*"
icu_properties_data = "=2.0.*"
icu_provider = "=2.0.*"
